# PsDesign

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  start.bat  vite.config.js
.github/workflows/: release.yml
public/: splash.html
src/: ai-install.js  ai-ocr.js  ai-place.js  auto-updater.js  canvas-tools.js  file-picker.js  first-run-setup.js  font-book.js  font-loader.js  hamburger-menu.js  main.js  normalize.js  overscroll.js  pagebar.js  pdf-loader.js  pdf-pages.js  pdf-view.js  proofread.js  psd-loader.js  rulers.js  settings-ui.js  settings.js  spread-view.js  state.js  style-palette.js  styles.css  text-editor.js  txt-source.js  ui-feedback.js  viewer-mode.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: install-ai-models.ps1
src-tauri/src/: alignment.rs  fonts.rs  jsx_gen.rs  lib.rs  main.rs  ocr.rs  photoshop.rs  tachimi.rs
src/bind/: editor-pane.js  save.js
src/services/: psd-load.js  tachimi.js
src/utils/: manga-order.js  path.js
