[package]
name = "psdesign"
version = "1.5.0"
description = "PSD spread editor with Photoshop apply-back, AI OCR, and auto-placement (mokuro)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "psdesign_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ttf-parser = "0.21"
image = "0.25"
pdfium-render = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.dev.package.pdfium-render]
opt-level = 3

[profile.dev.package.image]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
